# Automated-AI-Agents-for-Account-Opening-KYC-Processing

./: README.md
banking/: README.md  pyproject.toml  report.md
banking/kyc_path/: sample_data_kyc.csv
banking/output/: extracted_data.json
banking/src/banking/: crew.py  main.py
banking/src/banking/config/: agents.yaml  tasks.yaml
banking/src/banking/tools/: custom_tool.py  data_extraction_tool.py  fetch_acc_data.py  test_code.py
banking/src/banking/utils/: pdf_extraction.py
banking/tests/: test.py
