[project]
name = "banking"
version = "0.1.0"
description = "banking using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "amazon-textract-response-parser>=1.0.3",
    "boto3>=1.36.19",
    "crewai[tools]>=0.100.1,<1.0.0",
    "pdf2image>=1.17.0",
    "pymongo>=4.11.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "trp>=0.1.6a1",
]

[project.scripts]
banking = "banking.main:run"
run_crew = "banking.main:run"
train = "banking.main:train"
replay = "banking.main:replay"
test = "banking.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
